syntax = "proto3";
package CIS.InternalServices.NotificationService.v2;
option csharp_namespace = "CIS.InternalServices.NotificationService.v2";

import "Messages/Types.proto";
import "google/protobuf/wrappers.proto";

message SendEmailFromTemplateRequest {
	EmailAddress From = 1;
    repeated EmailAttachment Attachments = 2;
	Identifier Identifier = 3;
	google.protobuf.Int64Value CaseId = 4;
	google.protobuf.StringValue CustomId = 5;
	google.protobuf.StringValue DocumentId = 6;
	DocumentHash DocumentHash = 7;
}
